--- a/main.tex
+++ b/main.tex
@@ -6,9 +6,9 @@
 \usepackage{ustcextra}
 \graphicspath{{figures/}}
 
-\title{中国科学技术大学\\学位论文模板示例文档}
-\author{李泽平}
-\major{数学与应用数学}
+\title{强化学习技术在CRM中的\\研究和应用}
+\author{李鹏程}
+\major{计算机应用技术}
 \supervisor{华罗庚\ 教授}
 \cosupervisor{钱学森\ 教授}
 % \date{二〇一七年五月一日}    % 注释掉则为今日
