--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,7 @@
 \title{强化学习技术在CRM中的\\研究和应用}
 \author{李鹏程}
 \major{计算机应用技术}
-\supervisor{华罗庚\ 教授}
+\supervisor{王行甫\ 副教授}
 \cosupervisor{钱学森\ 教授}
 % \date{二〇一七年五月一日}    % 注释掉则为今日
 % \professionaltype{专业学位类型}
