--- a/bib/ustc.bib
+++ b/bib/ustc.bib
@@ -1,3 +1,18 @@
+@book{客户关系管理丁建石,
+  author    = {丁建石},
+  title     = {客户关系管理},
+  publisher = {北京大学出版社},
+  address   = {北京},
+  year      = {2006},
+}
+@book{王广宇2013客户关系管理,
+  title     ={客户关系管理},
+  author    ={王广宇},
+  year      ={2013},
+  address   = {北京},
+  publisher={清华大学出版社}
+}
+
 @article{knuth84,
   author    = {Donald E. Knuth},
   title     = {Literate Programming},
