--- a/main.tex
+++ b/main.tex
@@ -1,25 +1,25 @@
 %!TEX encoding = UTF-8 Unicode
 %!TEX program = xelatex
 
-\documentclass[doctor]{ustcthesis}
+\documentclass[master]{ustcthesis}
 % bachelor|master|doctor [professional] [english] [pdf] [authoryear|numebers]
 \usepackage{ustcextra}
 \graphicspath{{figures/}}
 
-\title{强化学习技术在CRM中的\\研究和应用}
+\title{强化学习框架在客户关系管理\\问题中的建模}
 \author{李鹏程}
 \major{计算机应用技术}
 \supervisor{王行甫\ 副教授}
-\cosupervisor{钱学森\ 教授}
+% \cosupervisor{钱学森\ 教授}
 % \date{二〇一七年五月一日}    % 注释掉则为今日
 % \professionaltype{专业学位类型}
 % \secrettext{机密\quad 小于等于20年}    % 内部|秘密|机密，注释本行则不保密
 
 \entitle{An Example of USTC Thesis Template for Bachelor, Master and Doctor}
-\enauthor{Zeping Li}
+\enauthor{Pengcheng Li}
 \enmajor{Mathematics and Applied Mathematics}
-\ensupervisor{Prof. Luogeng Hua}
-\encosupervisor{Prof. Xuesen Qian}
+\ensupervisor{Prof. Xingfu Wang}
+% \encosupervisor{Prof. Xuesen Qian}
 % \endate{May 1, 2017}    % today if commented
 % \enprofessionaltype{Professional degree type}
 % \ensecrettext{Confidential\quad Less than or equal to 20 years}
