20180303，第一章完成

--- a/bib/ustc.bib
+++ b/bib/ustc.bib
@@ -10,8 +10,341 @@
   author    ={王广宇},
   year      ={2013},
   address   = {北京},
-  publisher={清华大学出版社}
+  publisher={清华大学出版社},
 }
+@article{bahari2015efficient,
+  title={An efficient CRM-data mining framework for the prediction of customer behaviour},
+  author={Bahari, T Femina and Elayidom, M Sudheep},
+  journal={Procedia computer science},
+  volume={46},
+  pages={725--731},
+  year={2015},
+  publisher={Elsevier},
+}
+@article{farquad2014churn,
+  title={Churn prediction using comprehensible support vector machine: An analytical CRM application},
+  author={Farquad, Mohammed Abdul Haque and Ravi, Vadlamani and Raju, S Bapi},
+  journal={Applied Soft Computing},
+  volume={19},
+  pages={31--40},
+  year={2014},
+  publisher={Elsevier},
+}
+@book{linoff2011data,
+  title={Data mining techniques: for marketing, sales, and customer relationship management},
+  author={Linoff, Gordon S and Berry, Michael JA},
+  year={2011},
+  publisher={John Wiley \& Sons},
+}
+@article{chiang2018applying,
+  title={Applying data mining for online CRM marketing strategy: an empirical case of coffee shop industry in Taiwan},
+  author={Chiang, Wen-Yu},
+  journal={British Food Journal},
+  number={just-accepted},
+  pages={00--00},
+  year={2018},
+  publisher={Emerald Publishing Limited},
+}
+@article{ballings2015crm,
+  title={CRM in social media: Predicting increases in Facebook usage frequency},
+  author={Ballings, Michel and Van den Poel, Dirk},
+  journal={European Journal of Operational Research},
+  volume={244},
+  number={1},
+  pages={248--260},
+  year={2015},
+  publisher={Elsevier}
+}
+@article{wong2005mining,
+  title={Mining customer value: From association rules to direct marketing},
+  author={Wong, Ke Wang and Zhou, Senqiang and Yang, Qiang and Yeung, Jack Man Shun},
+  journal={Data Mining and Knowledge Discovery},
+  volume={11},
+  number={1},
+  pages={57--79},
+  year={2005},
+  publisher={Springer}
+}
+@article{karim2013decision,
+  title={Decision tree and naive bayes algorithm for classification and generation of actionable knowledge for direct marketing},
+  author={Karim, Masud and Rahman, Rashedur M},
+  journal={Journal of Software Engineering and Applications},
+  volume={6},
+  number={04},
+  pages={196},
+  year={2013},
+  publisher={Scientific Research Publishing}
+}
+@inproceedings{alam2012actionable,
+  title={Actionable knowledge mining from improved post processing decision trees},
+  author={Alam, M and Alam, SA},
+  booktitle={International Conference on Computing and Control Engineering (ICCCE 2012), Chennai},
+  pages={1--8},
+  year={2012}
+}
+@article{coussement2015improving,
+  title={Improving direct mail targeting through customer response modeling},
+  author={Coussement, Kristof and Harrigan, Paul and Benoit, Dries F},
+  journal={Expert Systems With Applications},
+  volume={42},
+  number={22},
+  pages={8403--8412},
+  year={2015},
+  publisher={Elsevier}
+}
+@article{parlar2017using,
+  title={Using Data Mining Techniques for Detecting the Important Features of the Bank Direct Marketing Data},
+  author={Parlar, Tuba and ACARAVCI, Song{\"u}l Kakilli},
+  journal={International Journal of Economics and Financial Issues},
+  volume={7},
+  number={2},
+  pages={692--696},
+  year={2017}
+}
+@mastersthesis{徐笑昂2007直复营销模式下的商品选择和顾客分群算法研究,
+  title={直复营销模式下的商品选择和顾客分群算法研究},
+  author={徐笑昂},
+  year={2007},
+  school={吉林大学}
+}
+@article{ngai2009application,
+  title={Application of data mining techniques in customer relationship management: A literature review and classification},
+  author={Ngai, Eric WT and Xiu, Li and Chau, Dorothy CK},
+  journal={Expert systems with applications},
+  volume={36},
+  number={2},
+  pages={2592--2602},
+  year={2009},
+  publisher={Elsevier}
+}
+@article{sing2013data,
+  title={Data mining framework for direct marketing: A case study of bank marketing},
+  author={Sing’oei, Lilian and Wang, Jiayang},
+  journal={International Journal of Computer Science Issues (IJCSI)},
+  volume={10},
+  number={2},
+  pages={198--203},
+  year={2013}
+}
+@article{chen2015behavior,
+  title={Behavior-aware user response modeling in social media: Learning from diverse heterogeneous data},
+  author={Chen, Zhen-Yu and Fan, Zhi-Ping and Sun, Minghe},
+  journal={European Journal of Operational Research},
+  volume={241},
+  number={2},
+  pages={422--434},
+  year={2015},
+  publisher={Elsevier}
+}
+@inproceedings{pednault2002sequential,
+  title={Sequential cost-sensitive decision making with reinforcement learning},
+  author={Pednault, Edwin and Abe, Naoki and Zadrozny, Bianca},
+  booktitle={Proceedings of the eighth ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={259--268},
+  year={2002},
+  organization={ACM}
+}
+@inproceedings{silver2013concurrent,
+  title={Concurrent reinforcement learning from customer interactions},
+  author={Silver, David and Newnham, Leonard and Barker, David and Weller, Suzanne and McFall, Jason},
+  booktitle={International Conference on Machine Learning},
+  pages={924--932},
+  year={2013}
+}
+@article{tkachenko2015autonomous,
+  title={Autonomous CRM control via CLV approximation with deep reinforcement learning in discrete and continuous action space},
+  author={Tkachenko, Yegor},
+  journal={arXiv preprint arXiv:1504.01840},
+  year={2015}
+}
+@inproceedings{zhang2017multi,
+  title={Multi-Channel Marketing with Budget Complementarities},
+  author={Zhang, Haifeng and Vorobeychik, Yevgeniy and Procaccia, Ariel D},
+  booktitle={Proceedings of the 16th Conference on Autonomous Agents and MultiAgent Systems},
+  pages={1232--1240},
+  year={2017},
+  organization={International Foundation for Autonomous Agents and Multiagent Systems}
+}
+@article{yang2012budget,
+  title={A budget optimization framework for search advertisements across markets},
+  author={Yang, Yanwu and Zhang, Jie and Qin, Rui and Li, Juanjuan and Wang, Fei-Yue and Qi, Wei},
+  journal={IEEE Transactions on Systems, Man, and Cybernetics-Part A: Systems and Humans},
+  volume={42},
+  number={5},
+  pages={1141--1151},
+  year={2012},
+  publisher={IEEE}
+}
+@inproceedings{ding2013multi,
+  title={Multi-Armed Bandit with Budget Constraint and Variable Costs.},
+  author={Ding, Wenkui and Qin, Tao and Zhang, Xu-Dong and Liu, Tie-Yan},
+  booktitle={AAAI},
+  year={2013}
+}
+@inproceedings{boutilier2016budget,
+  title={Budget Allocation using Weakly Coupled, Constrained Markov Decision Processes.},
+  author={Boutilier, Craig and Lu, Tyler},
+  booktitle={UAI},
+  year={2016}
+}
+@inproceedings{de2017bounding,
+  title={Bounding the Probability of Resource Constraint Violations in Multi-Agent MDPs.},
+  author={de Nijs, Frits and Walraven, Erwin and de Weerdt, Mathijs Michiel and Spaan, Matthijs TJ},
+  booktitle={AAAI},
+  pages={3562--3568},
+  year={2017}
+}
+@incollection{williams1992simple,
+  title={Simple statistical gradient-following algorithms for connectionist reinforcement learning},
+  author={Williams, Ronald J},
+  booktitle={Reinforcement Learning},
+  pages={5--32},
+  year={1992},
+  publisher={Springer}
+}
+@article{baxter2001infinite,
+  title={Infinite-horizon policy-gradient estimation},
+  author={Baxter, Jonathan and Bartlett, Peter L},
+  journal={Journal of Artificial Intelligence Research},
+  volume={15},
+  pages={319--350},
+  year={2001}
+}
+@book{neumann2005reinforcement,
+  title={The reinforcement learning toolbox, reinforcement learning for optimal control tasks},
+  author={Neumann, Gerhard},
+  year={2005},
+  publisher={na}
+}
+@inproceedings{konda2000actor,
+  title={Actor-critic algorithms},
+  author={Konda, Vijay R and Tsitsiklis, John N},
+  booktitle={Advances in neural information processing systems},
+  pages={1008--1014},
+  year={2000}
+}
+@article{mnih2013playing,
+  title={Playing atari with deep reinforcement learning},
+  author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Graves, Alex and Antonoglou, Ioannis and Wierstra, Daan and Riedmiller, Martin},
+  journal={arXiv preprint arXiv:1312.5602},
+  year={2013}
+}
+@article{watkins1992q,
+  title={Q-learning},
+  author={Watkins, Christopher JCH and Dayan, Peter},
+  journal={Machine learning},
+  volume={8},
+  number={3-4},
+  pages={279--292},
+  year={1992},
+  publisher={Springer}
+}
+@book{rummery1994line,
+  title={On-line Q-learning using connectionist systems},
+  author={Rummery, Gavin A and Niranjan, Mahesan},
+  volume={37},
+  year={1994},
+  publisher={University of Cambridge, Department of Engineering}
+}
+@article{samuel1959some,
+  title={Some studies in machine learning using the game of checkers},
+  author={Samuel, Arthur L},
+  journal={IBM Journal of research and development},
+  volume={3},
+  number={3},
+  pages={210--229},
+  year={1959},
+  publisher={IBM}
+}
+@article{sutton1988learning,
+  title={Learning to predict by the methods of temporal differences},
+  author={Sutton, Richard S},
+  journal={Machine learning},
+  volume={3},
+  number={1},
+  pages={9--44},
+  year={1988},
+  publisher={Springer}
+}
+@article{bradtke1996linear,
+  title={Linear least-squares algorithms for temporal difference learning},
+  author={Bradtke, Steven J and Barto, Andrew G},
+  journal={Machine learning},
+  volume={22},
+  number={1-3},
+  pages={33--57},
+  year={1996},
+  publisher={Springer}
+}
+@inproceedings{precup2001off,
+  title={Off-policy temporal-difference learning with function approximation},
+  author={Precup, Doina and Sutton, Richard S and Dasgupta, Sanjoy},
+  booktitle={ICML},
+  pages={417--424},
+  year={2001}
+}
+@inproceedings{sutton2009convergent,
+  title={A Convergent $ O (n) $ Temporal-difference Algorithm for Off-policy Learning with Linear Function Approximation},
+  author={Sutton, Richard S and Maei, Hamid R and Szepesv{\'a}ri, Csaba},
+  booktitle={Advances in neural information processing systems},
+  pages={1609--1616},
+  year={2009}
+}
+@inproceedings{bertsekas1995neuro,
+  title={Neuro-dynamic programming: an overview},
+  author={Bertsekas, Dimitri P and Tsitsiklis, John N},
+  booktitle={Decision and Control, 1995., Proceedings of the 34th IEEE Conference on},
+  volume={1},
+  pages={560--564},
+  year={1995},
+  organization={IEEE}
+}
+@article{mnih2015human,
+  title={Human-level control through deep reinforcement learning},
+  author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A and Veness, Joel and Bellemare, Marc G and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K and Ostrovski, Georg and others},
+  journal={Nature},
+  volume={518},
+  number={7540},
+  pages={529},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+@article{ormoneit2002kernel,
+  title={Kernel-based reinforcement learning},
+  author={Ormoneit, Dirk and Sen, {\'S}aunak},
+  journal={Machine learning},
+  volume={49},
+  number={2-3},
+  pages={161--178},
+  year={2002},
+  publisher={Springer}
+}
+@article{xu2005kernel,
+  title={Kernel least-squares temporal difference learning},
+  author={Xu, Xin and Xie, Tao and Hu, Dewen and Lu, Xicheng},
+  journal={International Journal of Information Technology},
+  volume={11},
+  number={9},
+  pages={54--63},
+  year={2005}
+}
+@article{xu2007kernel,
+  title={Kernel-based least squares policy iteration for reinforcement learning},
+  author={Xu, Xin and Hu, Dewen and Lu, Xicheng},
+  journal={IEEE Transactions on Neural Networks},
+  volume={18},
+  number={4},
+  pages={973--992},
+  year={2007},
+  publisher={IEEE}
+}
+
+
+
+
+
+
+
 
 @article{knuth84,
   author    = {Donald E. Knuth},
