20180304，第二章第一节

--- a/main.tex
+++ b/main.tex
@@ -50,6 +50,11 @@
 
 \mainmatter
 \input{chapters/intro}
+\input{chapters/theory}
+\input{chapters/direct}
+\input{chapters/advertising}
+\input{chapters/simulation}
+\input{chapters/conclution}
 \input{chapters/math}
 \input{chapters/floats}
 \input{chapters/citations}
