--- a/bib/ustc.bib
+++ b/bib/ustc.bib
@@ -338,8 +338,26 @@
   year={2007},
   publisher={IEEE}
 }
-
-
+@article{dwyer1997customer,
+  title={Customer lifetime valuation to support marketing decision making},
+  author={Dwyer, F Robert},
+  journal={Journal of interactive marketing},
+  volume={11},
+  number={4},
+  pages={6--13},
+  year={1997},
+  publisher={Elsevier}
+}
+@article{kaelbling1998planning,
+  title={Planning and acting in partially observable stochastic domains},
+  author={Kaelbling, Leslie Pack and Littman, Michael L and Cassandra, Anthony R},
+  journal={Artificial intelligence},
+  volume={101},
+  number={1-2},
+  pages={99--134},
+  year={1998},
+  publisher={Elsevier}
+}
 
 
 
