--- a/main.tex
+++ b/main.tex
@@ -55,9 +55,9 @@
 \input{chapters/advertising}
 \input{chapters/simulation}
 \input{chapters/conclution}
-\input{chapters/math}
-\input{chapters/floats}
-\input{chapters/citations}
+% \input{chapters/math}
+% \input{chapters/floats}
+% \input{chapters/citations}
 \bibliography{bib/ustc}
 
 \appendix
