20180311第三章完毕

--- a/bib/ustc.bib
+++ b/bib/ustc.bib
@@ -358,6 +358,51 @@
   year={1998},
   publisher={Elsevier}
 }
+@inproceedings{bakker2002reinforcement,
+  title={Reinforcement learning with long short-term memory},
+  author={Bakker, Bram},
+  booktitle={Advances in neural information processing systems},
+  pages={1475--1482},
+  year={2002}
+}
+@article{hausknecht2015deep,
+  title={Deep recurrent q-learning for partially observable mdps},
+  author={Hausknecht, Matthew and Stone, Peter},
+  journal={CoRR, abs/1507.06527},
+  year={2015}
+}
+@techreport{lin1993reinforcement,
+  title={Reinforcement learning for robots using neural networks},
+  author={Lin, Long-Ji},
+  year={1993},
+  institution={Carnegie-Mellon Univ Pittsburgh PA School of Computer Science}
+}
+@article{narasimhan2015language,
+  title={Language understanding for text-based games using deep reinforcement learning},
+  author={Narasimhan, Karthik and Kulkarni, Tejas and Barzilay, Regina},
+  journal={arXiv preprint arXiv:1506.08941},
+  year={2015}
+}
+@inproceedings{pineau2003point,
+  title={Point-based value iteration: An anytime algorithm for POMDPs},
+  author={Pineau, Joelle and Gordon, Geoff and Thrun, Sebastian and others},
+  booktitle={IJCAI},
+  volume={3},
+  pages={1025--1032},
+  year={2003}
+}
+@article{williams2007partially,
+  title={Partially observable Markov decision processes for spoken dialog systems},
+  author={Williams, Jason D and Young, Steve},
+  journal={Computer Speech \& Language},
+  volume={21},
+  number={2},
+  pages={393--422},
+  year={2007},
+  publisher={Elsevier}
+}
+
+
 
 
 
