--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,8 @@
 \documentclass[master]{ustcthesis}
 % bachelor|master|doctor [professional] [english] [pdf] [authoryear|numebers]
 \usepackage{ustcextra}
+\usepackage{bm}
+\usepackage{amsmath}
 \graphicspath{{figures/}}
 
 \title{强化学习框架在客户关系管理\\问题中的建模}
