--- a/main.tex
+++ b/main.tex
@@ -6,9 +6,13 @@
 \usepackage{ustcextra}
 \usepackage{bm}
 \usepackage{amsmath}
+\usepackage{breqn}
+
+\allowdisplaybreaks[3]
 \graphicspath{{figures/}}
 
-\title{强化学习框架在客户关系管理\\问题中的建模}
+
+\title{强化学习框架在直复营销体系\\中的研究}
 \author{李鹏程}
 \major{计算机应用技术}
 \supervisor{王行甫\ 副教授}
