--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 \graphicspath{{figures/}}
 
 
-\title{强化学习框架在直复营销体系\\中的研究}
+\title{强化学习技术在企业营销\\中的研究}
 \author{李鹏程}
 \major{计算机应用技术}
 \supervisor{王行甫\ 副教授}
