第二遍 第一、二章

--- a/bib/ustc.bib
+++ b/bib/ustc.bib
@@ -1,16 +1,25 @@
-@book{客户关系管理丁建石,
-  author    = {丁建石},
-  title     = {客户关系管理},
-  publisher = {北京大学出版社},
-  address   = {北京},
-  year      = {2006},
-}
 @book{王广宇2013客户关系管理,
   title     ={客户关系管理},
   author    ={王广宇},
   year      ={2013},
   address   = {北京},
   publisher={清华大学出版社},
+}
+@article{菲利普2016营销管理,
+  title={《 营销管理》},
+  author={菲利普 and 科特勒 and 凯文 and 莱恩 and 凯勒 and 何佳讯 and 于洪彦 and 牛永革 and 徐岚 and 董伊人 and others},
+  journal={品牌},
+  number={5},
+  pages={2},
+  year={2016}
+}
+@article{谭思敏2008中国式营销,
+  title={中国式营销},
+  author={谭思敏},
+  journal={汽车观察},
+  number={6},
+  pages={101--102},
+  year={2008}
 }
 @article{bahari2015efficient,
   title={An efficient CRM-data mining framework for the prediction of customer behaviour},
@@ -54,6 +63,12 @@
   pages={248--260},
   year={2015},
   publisher={Elsevier}
+}
+@book{stone1988successful,
+  title={Successful direct marketing methods},
+  author={Stone, Bob and Jacobs, Ron},
+  year={1988},
+  publisher={NTC Business Books Lincolnwood, IL}
 }
 @article{wong2005mining,
   title={Mining customer value: From association rules to direct marketing},
