--- a/main.tex
+++ b/main.tex
@@ -7,12 +7,13 @@
 \usepackage{bm}
 \usepackage{amsmath}
 \usepackage{breqn}
-
-\allowdisplaybreaks[3]
+\usepackage{longtable}
+% \allowdisplaybreaks[3]
 \graphicspath{{figures/}}
 
 
-\title{强化学习技术在企业营销\\中的研究}
+% \title{基于值函数的强化学习在市场营销决策中的研究}
+\title{基于值函数逼近的强化学习在关系市场营销中的研究}
 \author{李鹏程}
 \major{计算机应用技术}
 \supervisor{王行甫\ 副教授}
@@ -49,10 +50,10 @@
 \frontmatter
 \input{chapters/abstract}
 \tableofcontents
-% \listoffigures
-% \listoftables
-% \listofalgorithms
-% \input{chapters/0.notation}
+\listoffigures
+\listoftables
+\listofalgorithms
+\input{chapters/_notation}
 
 \mainmatter
 \input{chapters/intro}
