--- a/bib/ustc.bib
+++ b/bib/ustc.bib
@@ -70,6 +70,26 @@
   year={1988},
   publisher={NTC Business Books Lincolnwood, IL}
 }
+@article{bahnsen2015example,
+  title={Example-dependent cost-sensitive decision trees},
+  author={Bahnsen, Alejandro Correa and Aouada, Djamila and Ottersten, Bj{\"o}rn},
+  journal={Expert Systems with Applications},
+  volume={42},
+  number={19},
+  pages={6609--6619},
+  year={2015},
+  publisher={Elsevier}
+}
+@article{jiang2014cost,
+  title={Cost-sensitive Bayesian network classifiers},
+  author={Jiang, Liangxiao and Li, Chaoqun and Wang, Shasha},
+  journal={Pattern Recognition Letters},
+  volume={45},
+  pages={211--216},
+  year={2014},
+  publisher={Elsevier}
+}
+
 @article{wong2005mining,
   title={Mining customer value: From association rules to direct marketing},
   author={Wong, Ke Wang and Zhou, Senqiang and Yang, Qiang and Yeung, Jack Man Shun},
@@ -79,6 +99,54 @@
   pages={57--79},
   year={2005},
   publisher={Springer}
+}
+@article{cui2012cost,
+  title={Cost-sensitive learning via priority sampling to improve the return on marketing and CRM investment},
+  author={Cui, Geng and Wong, Man Leung and Wan, Xiang},
+  journal={Journal of Management Information Systems},
+  volume={29},
+  number={1},
+  pages={341--374},
+  year={2012},
+  publisher={Taylor \& Francis}
+}
+@article{migueis2017predicting,
+  title={Predicting direct marketing response in banking: comparison of class imbalance methods},
+  author={Migu{\'e}is, Vera L and Camanho, Ana S and Borges, Jos{\'e}},
+  journal={Service Business},
+  volume={11},
+  number={4},
+  pages={831--849},
+  year={2017},
+  publisher={Springer}
+}
+@article{zakaryazad2016profit,
+  title={A profit-driven Artificial Neural Network (ANN) with applications to fraud detection and direct marketing},
+  author={Zakaryazad, Ashkan and Duman, Ekrem},
+  journal={Neurocomputing},
+  volume={175},
+  pages={121--131},
+  year={2016},
+  publisher={Elsevier}
+}
+@article{hu2015cost,
+  title={Cost-sensitive and ensemble-based prediction model for outsourced software project risk prediction},
+  author={Hu, Yong and Feng, Bin and Mo, Xizhu and Zhang, Xiangzhou and Ngai, EWT and Fan, Ming and Liu, Mei},
+  journal={Decision Support Systems},
+  volume={72},
+  pages={11--23},
+  year={2015},
+  publisher={Elsevier}
+}
+@article{kim2009new,
+  title={A new marketing strategy map for direct marketing},
+  author={Kim, Young Ae and Song, Hee Seok and Kim, Soung Hie},
+  journal={Knowledge-Based Systems},
+  volume={22},
+  number={5},
+  pages={327--335},
+  year={2009},
+  publisher={Elsevier}
 }
 @article{karim2013decision,
   title={Decision tree and naive bayes algorithm for classification and generation of actionable knowledge for direct marketing},
@@ -166,11 +234,36 @@
   pages={924--932},
   year={2013}
 }
+@inproceedings{abe2004cross,
+  title={Cross channel optimized marketing by reinforcement learning},
+  author={Abe, Naoki and Verma, Naval and Apte, Chid and Schroko, Robert},
+  booktitle={Proceedings of the tenth ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={767--772},
+  year={2004},
+  organization={ACM}
+}
 @article{tkachenko2015autonomous,
   title={Autonomous CRM control via CLV approximation with deep reinforcement learning in discrete and continuous action space},
   author={Tkachenko, Yegor},
   journal={arXiv preprint arXiv:1504.01840},
   year={2015}
+}
+@article{yang2012budget,
+  title={A budget optimization framework for search advertisements across markets},
+  author={Yang, Yanwu and Zhang, Jie and Qin, Rui and Li, Juanjuan and Wang, Fei-Yue and Qi, Wei},
+  journal={IEEE Transactions on Systems, Man, and Cybernetics-Part A: Systems and Humans},
+  volume={42},
+  number={5},
+  pages={1141--1151},
+  year={2012},
+  publisher={IEEE}
+}
+@inproceedings{archak2010budget,
+  title={Budget optimization for online advertising campaigns with carryover effects},
+  author={Archak, Nikolay and Mirrokni, Vahab and Muthukrishnan, S},
+  booktitle={Sixth Ad Auctions Workshop},
+  year={2010},
+  organization={Citeseer}
 }
 @inproceedings{zhang2017multi,
   title={Multi-Channel Marketing with Budget Complementarities},
@@ -217,6 +310,14 @@
   year={1992},
   publisher={Springer}
 }
+@incollection{lange2012batch,
+  title={Batch reinforcement learning},
+  author={Lange, Sascha and Gabel, Thomas and Riedmiller, Martin},
+  booktitle={Reinforcement learning},
+  pages={45--73},
+  year={2012},
+  publisher={Springer}
+}
 @article{baxter2001infinite,
   title={Infinite-horizon policy-gradient estimation},
   author={Baxter, Jonathan and Bartlett, Peter L},
@@ -243,6 +344,16 @@
   author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Graves, Alex and Antonoglou, Ioannis and Wierstra, Daan and Riedmiller, Martin},
   journal={arXiv preprint arXiv:1312.5602},
   year={2013}
+}
+@article{hochreiter1997long,
+  title={Long short-term memory},
+  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  journal={Neural computation},
+  volume={9},
+  number={8},
+  pages={1735--1780},
+  year={1997},
+  publisher={MIT Press}
 }
 @article{watkins1992q,
   title={Q-learning},
@@ -314,6 +425,25 @@
   year={1995},
   organization={IEEE}
 }
+@article{dwyer1997customer,
+  title={Customer lifetime valuation to support marketing decision making},
+  author={Dwyer, F Robert},
+  journal={Journal of interactive marketing},
+  volume={11},
+  number={4},
+  pages={6--13},
+  year={1997},
+  publisher={Elsevier}
+}
+@inproceedings{littman2002predictive,
+  title={Predictive representations of state},
+  author={Littman, Michael L and Sutton, Richard S},
+  booktitle={Advances in neural information processing systems},
+  pages={1555--1561},
+  year={2002}
+}
+
+
 @article{mnih2015human,
   title={Human-level control through deep reinforcement learning},
   author={Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Rusu, Andrei A and Veness, Joel and Bellemare, Marc G and Graves, Alex and Riedmiller, Martin and Fidjeland, Andreas K and Ostrovski, Georg and others},
