--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 
 
 % \title{基于值函数的强化学习在市场营销决策中的研究}
-\title{基于值函数逼近的强化学习在关系市场营销中的研究}
+\title{基于值函数的强化学习在直效营销中的研究}
 \author{李鹏程}
 \major{计算机应用技术}
 \supervisor{王行甫\ 副教授}
@@ -56,11 +56,14 @@
 \input{chapters/_notation}
 
 \mainmatter
-\input{chapters/intro}
+% \input{chapters/intro}
+\input{chapters/intro_}
 \input{chapters/theory}
+\input{chapters/advertise_}
+% \input{chapters/advertising}
 \input{chapters/direct}
-\input{chapters/advertising}
-\input{chapters/simulation}
+% \input{chapters/advertising}
+% \input{chapters/simulation}
 \input{chapters/conclution}
 % \input{chapters/math}
 % \input{chapters/floats}
