--- a/main.tex
+++ b/main.tex
@@ -61,7 +61,8 @@
 \input{chapters/theory}
 \input{chapters/advertise_}
 % \input{chapters/advertising}
-\input{chapters/direct}
+% \input{chapters/direct}
+\input{chapters/direct_}
 % \input{chapters/advertising}
 % \input{chapters/simulation}
 \input{chapters/conclution}
