--- a/bib/ustc.bib
+++ b/bib/ustc.bib
@@ -503,6 +503,16 @@
   year={1998},
   publisher={Elsevier}
 }
+@article{bersini1997simplification,
+  title={A simplification of the backpropagation-through-time algorithm for optimal neurocontrol},
+  author={Bersini, Hugues and Gorrini, Vittorio},
+  journal={IEEE transactions on neural networks},
+  volume={8},
+  number={2},
+  pages={437--441},
+  year={1997},
+  publisher={IEEE}
+}
 @inproceedings{bakker2002reinforcement,
   title={Reinforcement learning with long short-term memory},
   author={Bakker, Bram},
